# fman

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release-plz.yml  test.yml
src/: debug.rs  fs.rs  main.rs  ui.rs
src/event/: handler.rs  mod.rs
